[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interface/BaseTheme.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Keyboard.gd" type="Script" id=2]

[node name="Keyboard" type="Control" groups=["Inputs"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -523.0
rect_min_size = Vector2( 375, 132 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 375, 0 )
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Row1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 375.0
custom_constants/separation = 4
alignment = 1

[node name="Row2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 375.0
margin_bottom = 6.0
custom_constants/separation = 4
alignment = 1

[node name="Row3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 375.0
margin_bottom = 38.0
custom_constants/separation = 4
alignment = 1

[node name="Letters" type="HBoxContainer" parent="VBoxContainer/Row3"]
margin_left = 163.0
margin_right = 163.0
margin_bottom = 26.0
custom_constants/separation = 4

[node name="Backspace" type="Button" parent="VBoxContainer/Row3"]
margin_left = 167.0
margin_right = 212.0
margin_bottom = 26.0
text = "Back"

[connection signal="pressed" from="VBoxContainer/Row3/Backspace" to="." method="_on_Backspace_pressed"]
